<resources>
    <string name="app_name">AREA</string>
    <string name="description_profile_button">This is the profile button that redirects you to the profile page.</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>

    <string name="register_request">Register</string>
    <string name="login_request">Login</string>
    <string name="register_first_name_field_hint">First name</string>
    <string name="register_last_name_field_hint">Last name</string>
    <string name="register_email_field_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_ip_field_hint">IP</string>
    <string name="register_port_field_hint">Port</string>
    <string name="register_email_helper_text">E.g.: maxwell.frantz@epitech.eu</string>
    <string name="register_port_helper_text">0–65535</string>
    <string name="register_ip_helper_text">E.g.: 127.0.0.1</string>
    <string name="register_password_helper_text">8 characters minimum</string>

    <string name="profile_logout_button">Logout</string>
    <string name="area_list_button">Area List</string>
    <string name="area_creation_button">Create</string>
    <string name="action_service_title">IF</string>
    <string name="reaction_service_title">THEN</string>
    <string name="left_logo_desc">Left logo of a listView item</string>
    <string name="right_logo_desc">Right logo of a listView item</string>
    <string name="service_item_logo_desc">Logo of a listView item</string>
    <string name="not_logged_in_login_button_text">Log in</string>
    <string name="not_logged_in_register_button_text">Register</string>
    <string name="area_list_fetch_button">Refresh</string>
    <string name="profile_user_first_name">First name:</string>
    <string name="profile_user_last_name">Last name:</string>
    <string name="profile_user_email">Email:</string>
    <string name="profile_current_ip">Current IP:</string>
    <string name="profile_current_port">Current Port:</string>
    <string name="profile_change_ip_port_button">Change IP/Port</string>
    <string name="profile_edit_ip_port_confirmation">Edit</string>
    <string name="delete_area">Delete</string>
    <string name="enable_area">Enable</string>
    <string name="login_title">Login</string>
    <string name="login_or">or</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_redirect_to_register">No account? Register</string>
    <string name="connectivity_title">Connect your API</string>
    <string name="connectivity_test_connection">Test your connection</string>
    <string name="connectivity_apply">Apply</string>
    <string name="not_logged_in_change_ip_port_text">Change IP/Port</string>
    <string name="register_title">Create your account</string>
    <string name="register_redirect_to_login">Already an account? Login</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="spinner_desc">Injected action parameters</string>
    <string name="oauth_service_item_button_true">Unlink</string>
    <string name="oauth_service_item_button_false">Link</string>
    <string name="action_param_hint">actionParam</string>
    <string name="reaction_param_hint">reactionParam</string>
    <string name="edit_area_button">Edit</string>
    <string name="loading_reload">Reload</string>
    <string name="loading_loading_text">Loading...</string>
    <string name="select_action_service_field">Select your action service</string>
    <string name="select_reaction_service_field">Select your reaction service</string>

    <string name="done_button">Done</string>
    <string name="cancel_button">Cancel</string>
    <string name="action_param_button_text">Show injected action parameters</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_creation">New AREA</string>
    <string name="navbar_profile">Profile</string>
    <string name="list_item_enabled">Enabled</string>
    <string name="oauth_linking_refresh_content_description">Refresh button</string>
    <string name="profile_user_title">About you</string>
    <string name="profile_connectivity_title">Connectivity</string>
    <string name="profile_connectivity_edit_ip_port">Change connectivity settings</string>
    <string name="profile_nav_bar_logged_in_as_text">Logged in as </string>
    <string name="navbar_services">Services</string>
    <string name="navbar_logout">Logout</string>
    <string name="user_activity_change_wifi_text">Settings</string>
    <string name="reaction_parameter">Reaction parameter</string>
    <string name="action_parameter">Action parameter</string>
</resources>