<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_request"
        app:cornerRadius="100dp"
        app:layout_constraintTop_toBottomOf="@id/register_password_field_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_ip_field_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_ip_field_hint"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:helperTextEnabled="true"
        app:helperText="@string/register_ip_helper_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_first_name_field_layout"
        app:layout_constraintStart_toStartOf="@id/register_first_name_field_layout"
        app:errorEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_ip_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_port_field_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_port_field_hint"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        app:helperTextEnabled="true"
        app:helperText="@string/register_port_helper_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_first_name_field_layout"
        app:layout_constraintStart_toEndOf="@id/register_ip_field_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_port_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_first_name_field_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_first_name_field_hint"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/register_port_field_layout"
        app:layout_constraintBottom_toTopOf="@id/register_last_name_field_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_first_name_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_last_name_field_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_last_name_field_hint"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/register_first_name_field_layout"
        app:layout_constraintBottom_toTopOf="@id/register_email_field_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_last_name_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_email_field_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_field_hint"
        android:paddingBottom="16dp"
        app:helperTextEnabled="true"
        app:helperText="@string/register_email_helper_text"
        app:layout_constraintTop_toBottomOf="@id/register_last_name_field_layout"
        app:layout_constraintBottom_toTopOf="@id/register_password_field_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password_field_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_hint"
        android:paddingBottom="16dp"
        app:endIconMode="password_toggle"
        app:helperTextEnabled="true"
        app:helperText="@string/register_password_helper_text"
        app:layout_constraintTop_toBottomOf="@id/register_password_field_layout"
        app:layout_constraintBottom_toTopOf="@id/request_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>