<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_edit_ip_field_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/register_ip_field_hint"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:helperTextEnabled="true"
        app:helperText="@string/register_ip_helper_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_edit_ip_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_edit_port_field_layout"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_port_field_hint"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:helperTextEnabled="true"
        app:helperText="@string/register_port_helper_text"
        app:layout_constraintTop_toTopOf="@id/profile_edit_ip_field_layout"
        app:layout_constraintStart_toEndOf="@id/profile_edit_ip_field_layout"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_edit_port_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/profile_edit_ip_port_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_edit_ip_port_confirmation"
        app:cornerRadius="100dp"
        app:layout_constraintTop_toBottomOf="@id/profile_edit_ip_field_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>