<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="34sp"
        app:fontFamily="@font/bebas_neue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_or"
        android:textSize="12sp"
        app:fontFamily="@font/avenir_lt_std_55_roman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/request_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_field_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_field_hint"
        android:paddingBottom="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:helperText="@string/register_email_helper_text"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/login_password_field_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_field_layout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_hint"
        android:paddingBottom="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/request_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_field_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_field_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_request"
        android:textSize="18sp"
        android:fontFamily="@font/avenir_lt_std_55_roman"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_field_layout" />

    <Button
        android:id="@+id/login_with_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"
        android:textSize="18sp"
        android:fontFamily="@font/avenir_lt_std_55_roman"
        android:layout_marginTop="16dp"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        app:icon="@drawable/white_google_logo"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_or" />

    <Button
        android:id="@+id/login_redirect_to_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_redirect_to_register"
        android:textSize="11sp"
        android:fontFamily="@font/avenir_lt_std_55_roman"
        android:layout_marginTop="32dp"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_with_google_button" />

</androidx.constraintlayout.widget.ConstraintLayout>