<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_title"
    android:layout_width="match_parent"
    android:layout_height="55dp">

    <ImageView
        android:id="@+id/leftLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/left_logo_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/free_youtube_logo_icon_2431_thumb" />

    <ImageView
        android:id="@+id/rightLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/right_logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/_968823" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/action_service_title"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/leftLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reactionItemText"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="textEnd"
        android:textSize="8sp"
        app:layout_constraintEnd_toStartOf="@+id/rightLogo"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/actionItemText"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:textSize="8sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:text="@string/reaction_service_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/reactionItemText"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>