<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#D9D9D9"
        android:text="@string/back_button"
        android:textColor="#000000"
        app:cornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileLogoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="#D9D9D9"
        android:text="@string/profile_logout_button"
        android:textColor="#000000"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/oauth_github_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#D9D9D9"
        android:text="Connect"
        android:textColor="#000000"
        app:cornerRadius="25dp"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintEnd_toStartOf="@id/profileLogoutButton"
        app:layout_constraintTop_toTopOf="@id/profileLogoutButton"/>

    <!--<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileLogoutButton">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_service_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />
    </FrameLayout>-->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_user_first_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:text="@string/profile_user_first_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_user_first_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_user_first_name_text_view"
        tools:text="Aurelien" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_user_last_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:text="@string/profile_user_last_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_user_first_name_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_user_last_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_user_last_name_text_view"
        tools:text="Frantz" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_user_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:text="@string/profile_user_email"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_user_last_name_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_user_email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_user_email_text_view"
        tools:text="maxwell.frantz@epitech.eu" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_current_ip_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:text="@string/profile_current_ip"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_user_email_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_current_ip_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_current_ip_text_view"
        tools:text="127.0.0.1" />

    <Button
        android:id="@+id/profile_change_ip_port_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#D9D9D9"
        android:text="@string/profile_change_ip_port_button"
        android:textColor="#000000"
        app:cornerRadius="25dp"
        app:layout_constraintTop_toBottomOf="@id/profile_current_ip_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>